Release notes 1.1 - refactored project structure and some of the class definitions for better test architecture structure, updated support of java 17, Junit5 - implemented functions to extend test framework coverage to test AWS service - SNS, SQS, S3, Lambda, Step Function, DynamoDB - added Spring Boot framework support for easy app context creation, reading properties, supporting jdbc driver to work with PostgresSql DB